--- a/css/style-home.css
+++ b/css/style-home.css
@@ -1,245 +1,8 @@
-*,
-html {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
-}
-body {
-  background-color: #ffccdd98;
-  margin: 0px 40px;
-}
-
-.container {
+#btn-back-to-top {
   position: fixed;
-  width: 1110px;
-  top: 0;
-  background-color: wheat;
-  display: flex;
-  margin: 40px 80px;
-  justify-content: space-between;
-  padding: 20px 40px;
-  border-radius: 25px;
-}
-
-.container img {
-  width: 40px;
-}
-
-.container a {
-  align-content: center;
-  text-decoration: none;
-  color: #45413c;
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
-  font-size: 50px;
-  font-weight: bold;
-}
-
-.navigation {
-  display: flex;
-  list-style-type: none;
-  align-items: center;
-  color: #45413c;
-  text-transform: uppercase;
-  gap: none;
-}
-.navigation li a {
-  font-size: 25px;
-  font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
-  font-weight: lighter;
-}
-
-.navigation li a:hover{
-  color: wheat;
-  background-color: #45413c;
-  border-radius: 10px;
-  padding: 10px;
-} 
-
-li.dropdown2 {
-  display: inline-block;
-}
-
-.dropdown-content2 {
+  bottom: 20px;
+  right: 20px;
+  width: 50px;
+  height: 50px;
   display: none;
-  position: absolute;
-  background-color: wheat;
-  min-width: 100px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  z-index: 1;
-}
-
-.dropdown-content2 a {
-  color: #45413c;
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
-  text-align: left;
-}
-.dropdown2:hover .dropdown-content2 {
-  display: block;
-}
-
-.content {
-  margin: 80px;
-  margin-top: 200px;
-  padding-top: 40px;
-  padding-bottom: 80px;
-  display: flex;
-  justify-content: space-between;
-  background-color: white;
-  border-radius: 25px;
-  border-color: grey;
-}
-
-.content .tumbnail img {
-  width: 350px;
-  margin-left: 80px;
-  float: left;
-}
-
-.content .narasi img {
-  width: 400px;
-  margin-left: 80px;
-  float: left;
-}
-
-.content .text {
-  margin-left: 50%;
-}
-
-.content2 {
-  margin: 80px;
-  padding-top: 40px;
-  padding-bottom: 40px;
-  display: flex;
-  justify-content: space-between;
-  border-radius: 25px;
-  border-color: grey;
-}
-
-.container .kontak {
-  background-color: #ffccdd6e;
-  list-style-type: none;
-  gap: 50px;
-}
-
-.navbar-bottom {
-  background-color: wheat;
-  display: flex;
-  align-items: center;
-  margin: 40px 80px;
-  justify-content: space-between;
-  padding: 20px 0px 0px 40px;
-  border-radius: 25px;
-}
-
-.navigation {
-  display: flex;
-  list-style-type: none;
-  color: #45413c;
-  gap: 60px;
-  font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
-  font-size: 20px;
-  text-transform: uppercase;
-}
-
-.container2 {
-  display: flex;
-  margin: 40px 20px;
-  justify-content: space-between;
-  padding: 20px 40px;
-  border-radius: 25px;
-}
-
-.container2 img {
-  width: 40px;
-}
-
-.container2 a {
-  align-content: center;
-  text-decoration: none;
-  color: #45413c;
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
-  font-size: 50px;
-  font-weight: bold;
-}
-
-.navigation2 {
-  display: flex;
-  list-style-type: none;
-  color: #45413c;
-  gap: 10px;
-  text-transform: uppercase;
-}
-.navigation2 a li {
-  padding: 10px;
-  font-size: 30px;
-  font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
-  font-weight: lighter;
-}
-
-.navigation2 a li:hover{
-  color: wheat;
-  background-color: #45413c;
-  padding: 12px;
-  border-radius: 10px;
-}
-
-.sosial-media {
-  gap: 15px;
-  display: flex;
-  font-size: 40px;
-  align-items: center;
-}
-
-.sosial-media a {
-  text-decoration: none;
-  color: #45413c;
-}
-
-.tombol {
-  display: block;
-  position: fixed;
-  bottom: 100px;
-  right: 50px;
-  z-index: 99;
-  font-size: 30px;
-  border: none;
-  outline: none;
-  background-color: #fff;
-  color: #fc8ca3;
-  box-shadow: 0 0px 10px black;
-  cursor: pointer;
-  padding: 15px 15px 10px 15px;
-  border-radius: 8px;
-  -webkit-border-radius: 8px;
-  -moz-border-radius: 8px;
-  -ms-border-radius: 8px;
-  -o-border-radius: 8px;
-}
-.tombol:hover {
-  background-color: #fc8ca3;
-  color: #fff;
-}
-/* tentang.html */
-.content .kontak2{
-  list-style-type: none;
-  margin: 0px 40px;
-}
-
-.content .kontak2 li a{
-  text-decoration: none;
-  font-size: 30px;
-  color: #45413c;
-}
-
-.content .kontak2 li a:hover{
-  color: #fc8ca3;
-  border-bottom: 2px solid #fc8ca3;
-}
-
-.maps iframe{
-  border-radius: 8px;
-  box-shadow: 0 0px 10px black;
-  margin : 0px 40px;
 }
