--- a/css/style-register.css
+++ b/css/style-register.css
@@ -158,27 +158,26 @@ label::before{
     text-decoration: underline;
 }
 
-.tombol{
-    display: block;
+#btn-back-to-top {
     position: fixed;
-    bottom: 100px;
-    right: 50px;
-    z-index: 99;
-    font-size: 30px;
-    border: none;
-    outline: none;
-    background-color: #fff;
-    color: #fc8ca3;
-    box-shadow: 0 0px 10px black;
-    cursor: pointer;
-    padding: 15px 15px 10px 15px;
-    border-radius: 8px;
-    -webkit-border-radius: 8px;
-    -moz-border-radius: 8px;
-    -ms-border-radius: 8px;
-    -o-border-radius: 8px;
-}
-.tombol:hover{
-    background-color: #fc8ca3;
-    color: #fff;
-}
+    bottom: 20px;
+    right: 20px;
+    width: 50px;
+    height: 50px;
+    display: none;
+  }
+
+@media screen and (max-width : 768px){
+    .wrapper{
+       margin: 0 10px 0 10px;
+    }
+   
+    .remember-forgot label{
+       font-size: 12px;
+    }
+   
+    .remember-forgot a{
+       font-size: 12px;
+    }
+   
+   }
